Moving sorting to use collections of fields